# bardinux-meta

./: .bzrignore  .gitignore  Makefile  checkdeps
apport-hooks-bardinux/gcs/: changelog  depends  info
bardinux-all-tasks/gcs/: changelog  depends  info
bardinux-biology-task/gcs/: changelog  conflicts  depends  info
bardinux-bookmarks/gcs/: changelog  info
bardinux-cajacanarias-default-settings/gcs/: changelog  depends  info  provides
bardinux-cajacanarias-desktop/gcs/: changelog  depends  info
bardinux-chemistry-task/gcs/: changelog  conflicts  depends  info
bardinux-computing-task/gcs/: changelog  conflicts  depends  info  replaces
bardinux-console-extras-task/gcs/: changelog  depends  info  replaces
bardinux-dbg/gcs/: changelog  depends  info
bardinux-default-settings/gcs/: changelog  depends  info
bardinux-default-settings/gcs/newfiles_skel/usr/share/kde4/apps/kdm/themes/bardinux/: CMakeLists.txt  KdmGreeterTheme.desktop  elegant_air-bardinux.xml  ethais-bardinux.xml  oxygen-air-bardinux.xml
bardinux-design-task/gcs/: changelog  conflicts  depends  info
bardinux-desktop-base/gcs/: changelog  depends  info  replaces
bardinux-desktop/gcs/: changelog  depends  info  recommends  replaces  suggests
bardinux-dev-tools/gcs/: changelog  depends  info  recommends
bardinux-development-task/gcs/: changelog  depends  info  replaces  suggests
bardinux-education-task/gcs/: changelog  conflicts  depends  info
bardinux-first-start/gcs/: changelog  depends  info
bardinux-fonts-task/gcs/: changelog  depends  info  recommends  suggests
(+543 files in other folders)
