install(FILES
	branding-icon.png
	branding-icon.svgz
	CMakeLists.txt
	corp-logo.png
	corp-logo.svgz
	ethais-bardinux.xml
	KdmGreeterTheme.desktop
	lineedit_active.png
	lineedit_normal.png
	lock.png
	login_active.png
	login_normal.png
	rectangle_overlay.png
	rectangle.png
	screenshot.png
	screenshot.svgz
	session_normal.png
	system_normal.png
	user_icon.png
    wallpapers/background.svgz
    wallpapers/background-1280x800.jpg
    DESTINATION ${DATA_INSTALL_DIR}/kdm/themes/bardinux)
